--- a/css/main.css
+++ b/css/main.css
@@ -34,8 +34,7 @@ a {
 
 .content {
   max-width: 1440px;
-  margin: 0 auto;
-  border: 1px solid red; }
+  margin: 0 auto; }
   .content__warp {
     padding: 0 20px; }
     @media (min-width: 321px) {
