--- a/sass/site/__types.scss
+++ b/sass/site/__types.scss
@@ -1,3 +1,10 @@
+h1 {
+  @include font(normal, 36px, 60px);
+  @media (min-width: $mobile) {
+    @include font(normal, 60px, 90px);
+  }
+}
+
 .h2, h2 {
   @include font(normal, 36px, 60px);
   @media (min-width: $mobile) {
