--- a/sass/site/how.scss
+++ b/sass/site/how.scss
@@ -1,8 +1,15 @@
 .how {
-
+  &__block {
+    &--indent {
+      margin-bottom: 50px;
+    }
+  }
   &__title {
-    &--ident {
+    &--indent {
       padding-bottom: 40px;
+      @media(min-width: $mobile) {
+        padding-bottom: 75px;
+      }
     }
   }
   &__items {
@@ -22,7 +29,7 @@
     @media(min-width: $desktop) {
       width: 25%;
     }
-    &--ident {
+    &--indent {
       margin-bottom: 20px;
       @media(min-width: $mobile) {
         padding-right: 125px;
@@ -34,10 +41,13 @@
   }
   &__trafaret {
     @include square-size(60px);
+    @media(min-width: $mobile) {
+      @include square-size(80px);
+    }
     background-color: $primary;
     flex-shrink: 0;
     position: relative;
-    &--ident {
+    &--indent {
       @media(min-width: $mobile) {
         margin-bottom: 30px;
       }
@@ -60,7 +70,7 @@
   &__text {
     position: relative;
     z-index: 1;
-    &--ident {
+    &--indent {
       padding-left: 15px;
       @media(min-width: $mobile) {
         padding-left: 0;
@@ -79,13 +89,14 @@
       left: 0;
       pointer-events: none;
       color: $secondary;
-      @include font(normal, 180px, 1);
+      @include font(normal, 230px, 1);
       text-align: center;
       z-index: 0 ;
-      //margin-right: 90px;
     }
-    /*@media(min-width: $desktop) {
-      margin-right: 15px;
-    }*/
+  }
+  &--temp-margin {
+    @media(min-width: $mobile) {
+      margin-bottom: 135px;
+    }
   }
 }
