--- a/sass/site/variables.scss
+++ b/sass/site/variables.scss
@@ -26,4 +26,7 @@ $desktop: 1440px;
 
 //Time
 
-$transition-time: 0.2s;
+$transition-time: .2s;
+
+// Maket
+$maket-visible: 1; // 0 - Invisible | 1 - Visible
