--- a/sass/site/main-sect.scss
+++ b/sass/site/main-sect.scss
@@ -2,6 +2,7 @@
   &__block {
     display: flex;
     flex-direction: column;
+    position: relative;
     @media (min-width: $mobile) {
       //align-items: center;
     }
@@ -9,21 +10,43 @@
     }
   }
   &__label {
-    display: none;
+/*    display: none;
     @media (min-width: $mobile) {
       display: block;
+    }*/
+    text-align: center;
+    color: $white;
+    background: url('/img/index-background-mobile.png') no-repeat;
+    margin: 0 -20px;
+    padding: 30px;
+    height: 310px;
+    @media (min-width: $mobile) {
+      background: none;
+      color: $black;
+      text-align: start;
+      height: auto;
+      padding-bottom: 40px;
     }
+    @media (min-width: $desktop) {
+    }
+
   }
   &__title {
 
-    &--ident {
-      padding-bottom: 30px;
+    &--indent {
+      padding-bottom: 20px;
+      @media (min-width: $mobile) {
+        padding-bottom: 40px;
+      }
     }
   }
   &__description {
     text-transform: uppercase;
-    &--ident {
+    &--indent {
       padding-bottom: 45px;
+      @media (min-width: $mobile) {
+        padding-bottom: 0;
+      }
       @media (min-width: $desktop) {
         padding-bottom: 50px;
       }
@@ -31,38 +54,41 @@
   }
   &__picture {
     &--mobile {
+      margin: -145px auto 10px auto;
       @media (min-width: $mobile) {
         display: none;
       }
-      &--ident {
-        margin-top: 150px;
-      }
     }
     &--tablet {
-      margin-top: -70px;
+      margin: -75px 0 0 -75px;
       display: none;
       @media (min-width: $mobile) {
         display: block;
         order: 1 ;
       }
+      @media (min-width: $desktop) {
+        display: none;
+      }
+    }
+    &--desktop {
+      display: none;
+      @media (min-width: $desktop) {
+        //display: block;
+      }
     }
   }
   &__button {
-    background-color: $primary;
-    color: $white;
-    text-align: center;
-    @extend .h5;
-    padding: 10px 0;
-    @media (min-width: $mobile) {
-      padding: 10px 30px;
-      z-index: 1;
-    }
+    text-transform: uppercase;
+    white-space: nowrap;
+    position: relative;
+    z-index: 1;
   }
-  &--ident {
+  &--indent {
     padding-bottom: 20px;
     @media (min-width: $mobile) {
-      padding-bottom: 50px;
-      padding-left: 90px;
+      padding: 30px 0 0 80px;
+      //padding-bottom: 50px;
+      //padding-left: 90px;
     }
     @media (min-width: $desktop) {
       padding-bottom: 30px;
