--- a/sass/site/social.scss
+++ b/sass/site/social.scss
@@ -2,7 +2,6 @@
   display: flex;
 
     .icon {
-      //@include square-size(48px);
       color: $diz;
       svg {
         @include square-size(25px);
@@ -11,14 +10,14 @@
       cursor: pointer;
       outline: none;
       &:not(:last-child) {
-        margin-right: 6px;
+        margin-right: 20px;
+        @media (min-width: $mobile) {
+          margin-right: 30px;
+        }
       }
       &:hover {
-        //background-color: $primary-hover;
       }
       &:active {
-        //background-color: $primary-hover;
-        //color: rgba($white, .2);
       }
     }
     &--indent {
