--- a/sass/site/main-sect.scss
+++ b/sass/site/main-sect.scss
@@ -73,7 +73,7 @@
     &--desktop {
       display: none;
       @media (min-width: $desktop) {
-        //display: block;
+        display: block;
       }
     }
   }
