--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,26 +1,27 @@
- @import "site/variables";
- @import "site/body";
- @import "site/content";
- @import "site/mixins";
-  @import "site/part";
-  @import "site/breakpoint";
-  @import "site/_types";
+@import "site/variables";
+@import "site/body";
+@import "site/content";
+@import "site/mixins";
+@import "site/part";
+@import "site/breakpoint";
+@import "site/_types";
 
-  @import "site/top-nav";
-  @import "site/main-sect";
+@import "site/top-nav";
+@import "site/main-sect";
 
-  @import "site/choose";
-  @import "site/how";
-  @import "site/example";
-  @import "site/map";
+@import "site/choose";
+@import "site/how";
+@import "site/example";
+@import "site/map";
 
-  @import "site/btn";
- @import "site/social";
- @import "site/extended";
+@import "site/btn";
+@import "site/social";
+@import "site/extended";
+@import "site/switcher";
 
 
 
-  @import "site/footer";
+@import "site/footer";
 
 // @import "site/nav-icons";
 
