--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
           box-sizing: border-box; }
 
 body {
+  min-width: 260px;
   font: 14px/18px Aria, sans-serif; }
   @media (min-width: 321px) {
     body {
@@ -98,13 +99,13 @@ a {
     .h4, h4 {
       font: normal 20px/30px "Oswald", sans-serif; } }
 
-.h5, .top-nav__item, .main-sect__button, .btn, h5 {
+.h5, .nav__item, .top-nav__item, .main-sect__button, .btn, h5 {
   font: normal 14px/26px "Oswald", sans-serif; }
   @media (min-width: 321px) {
-    .h5, .top-nav__item, .main-sect__button, .btn, h5 {
+    .h5, .nav__item, .top-nav__item, .main-sect__button, .btn, h5 {
       font: normal 20px/30px "Oswald", sans-serif; } }
 
-.top-nav__block {
+.header__warp {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -116,7 +117,7 @@ a {
       -ms-flex-align: center;
           align-items: center; }
   @media (min-width: 321px) {
-    .top-nav__block {
+    .header__warp {
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
           -ms-flex-direction: row;
@@ -125,7 +126,7 @@ a {
           -ms-flex-pack: justify;
               justify-content: space-between; } }
 
-.top-nav__logo {
+.logo {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -135,38 +136,76 @@ a {
       -ms-flex-pack: center;
           justify-content: center; }
   @media (min-width: 768px) {
-    .top-nav__logo {
+    .logo {
       -webkit-box-pack: normal;
           -ms-flex-pack: normal;
               justify-content: normal; } }
-  .top-nav__logo-mobile {
+  .logo__mobile {
     position: absolute;
     top: 50%;
     -webkit-transform: translateY(-50%);
             transform: translateY(-50%);
     left: 25px; }
-    @media (min-width: 768px) {
-      .top-nav__logo-mobile {
+    @media (min-width: 321px) {
+      .logo__mobile {
         display: none; } }
-    .top-nav__logo-mobile-text {
+    .logo__mobile-text {
       margin: 25px 0; }
-      @media (min-width: 768px) {
-        .top-nav__logo-mobile-text {
+      @media (min-width: 321px) {
+        .logo__mobile-text {
           margin: 0;
           display: none; } }
-  .top-nav__logo-tablet {
+  .logo__tablet {
     display: none; }
-    @media (min-width: 768px) {
-      .top-nav__logo-tablet {
+    @media (min-width: 321px) {
+      .logo__tablet {
         display: block; } }
     @media (min-width: 1440px) {
-      .top-nav__logo-tablet {
+      .logo__tablet {
         display: none; } }
-  .top-nav__logo-desktop {
+  .logo__desktop {
     display: none; }
     @media (min-width: 1440px) {
-      .top-nav__logo-desktop {
+      .logo__desktop {
         display: inline-block; } }
+
+.nav {
+  text-align: center; }
+  @media (min-width: 321px) {
+    .nav {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; } }
+  @media (min-width: 1440px) {
+    .nav {
+      background-color: #68b738; } }
+  .nav__item {
+    color: #000000;
+    text-decoration: none;
+    text-transform: uppercase;
+    white-space: nowrap;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    display: block;
+    margin: 25px 0; }
+    @media (min-width: 321px) {
+      .nav__item {
+        margin: 0 18px;
+        padding: 5px 0;
+        -webkit-transition: opacity 0.2s ease, border 0.2s ease;
+        transition: opacity 0.2s ease, border 0.2s ease; }
+        .nav__item:hover {
+          color: rgba(0, 0, 0, 0.6); }
+        .nav__item:focus {
+          border-bottom: 2px solid #68b738; }
+        .nav__item:active {
+          color: rgba(0, 0, 0, 0.3); } }
+    @media (min-width: 1440px) {
+      .nav__item {
+        color: #ffffff; }
+        .nav__item:focus {
+          border-bottom: 2px solid #ffffff; } }
+    .nav__item:first-child {
+      margin-top: 0; }
 
 .top-nav__links {
   text-align: center; }
