master in fourth

--- a/css/main.css
+++ b/css/main.css
@@ -148,11 +148,113 @@ h1 {
     .h4, h4 {
       font: normal 20px/30px "Oswald", sans-serif; } }
 
-.h5, .btn, h5 {
+.h5, .nav__item, .btn, h5 {
   font: normal 14px/21px "Oswald", sans-serif; }
   @media (min-width: 321px) {
-    .h5, .btn, h5 {
+    .h5, .nav__item, .btn, h5 {
       font: normal 20px/30px "Oswald", sans-serif; } }
+
+.header__warp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  @media (min-width: 321px) {
+    .header__warp {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; } }
+
+.logo {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  @media (min-width: 768px) {
+    .logo {
+      -webkit-box-pack: normal;
+          -ms-flex-pack: normal;
+              justify-content: normal; } }
+  .logo__mobile {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    left: 25px; }
+    @media (min-width: 321px) {
+      .logo__mobile {
+        display: none; } }
+    .logo__mobile-text {
+      margin: 25px 0; }
+      @media (min-width: 321px) {
+        .logo__mobile-text {
+          margin: 0;
+          display: none; } }
+  .logo__tablet {
+    display: none; }
+    @media (min-width: 321px) {
+      .logo__tablet {
+        display: block; } }
+    @media (min-width: 1440px) {
+      .logo__tablet {
+        display: none; } }
+  .logo__desktop {
+    display: none; }
+    @media (min-width: 1440px) {
+      .logo__desktop {
+        display: inline-block; } }
+
+.nav {
+  text-align: center; }
+  @media (min-width: 321px) {
+    .nav {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; } }
+  @media (min-width: 1440px) {
+    .nav {
+      background-color: #68b738; } }
+  .nav__item {
+    color: #000000;
+    text-decoration: none;
+    text-transform: uppercase;
+    white-space: nowrap;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    display: block;
+    margin: 25px 0; }
+    @media (min-width: 321px) {
+      .nav__item {
+        margin: 0 18px;
+        padding: 5px 0;
+        -webkit-transition: opacity 0.2s ease, border 0.2s ease;
+        transition: opacity 0.2s ease, border 0.2s ease; }
+        .nav__item:hover {
+          color: rgba(0, 0, 0, 0.6); }
+        .nav__item:focus {
+          border-bottom: 2px solid #68b738; }
+        .nav__item:active {
+          color: rgba(0, 0, 0, 0.3); } }
+    @media (min-width: 1440px) {
+      .nav__item {
+        color: #ffffff; }
+        .nav__item:focus {
+          border-bottom: 2px solid #ffffff; } }
+    .nav__item:first-child {
+      margin-top: 0; }
 
 .top-nav__block {
   display: -webkit-box;
@@ -905,110 +1007,6 @@ h1 {
     .social .icon:active {
       opacity: .3;
       color: #68b738; }
-
-.border-mobile-top:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: -25px;
-  right: -25px;
-  border-top: 2px solid #e5e5e5; }
-  @media (min-width: 321px) {
-    .border-mobile-top:before {
-      border-top: none;
-      padding-top: 0; } }
-
-.switcher {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-transform: uppercase; }
-  .switcher__slider {
-    margin: 0 15px;
-    position: relative;
-    width: 84px;
-    height: 14px;
-    border: 1px solid rgba(102, 102, 102, 0.5);
-    border-radius: 5px;
-    background-color: #ffffff; }
-    @media (min-width: 321px) {
-      .switcher__slider {
-        width: 428px;
-        height: 6px;
-        border: none;
-        background-color: #dcdcdc;
-        pointer-events: none; } }
-    .switcher__slider:after {
-      content: '';
-      position: absolute;
-      top: 25%;
-      right: 50%;
-      bottom: 25%;
-      left: 5%;
-      border-radius: 3px;
-      background-color: #68b738;
-      -webkit-transition: -webkit-transform 0.2s easy;
-      transition: -webkit-transform 0.2s easy;
-      transition: transform 0.2s easy;
-      transition: transform 0.2s easy, -webkit-transform 0.2s easy;
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-      pointer-events: auto; }
-      @media (min-width: 321px) {
-        .switcher__slider:after {
-          cursor: pointer;
-          top: 50%;
-          left: 50%;
-          -webkit-transform: translate(-50%, -50%);
-                  transform: translate(-50%, -50%);
-          border-radius: 50%;
-          border: 1px solid #dcdcdc;
-          background-color: #ffffff;
-          -webkit-box-shadow: 0 1px 5px 0 rgba(50, 50, 50, 0.15);
-                  box-shadow: 0 1px 5px 0 rgba(50, 50, 50, 0.15);
-          width: 35px;
-          height: 35px;
-          -webkit-transition: border 0.2s ease, -webkit-box-shadow 0.2s ease;
-          transition: border 0.2s ease, -webkit-box-shadow 0.2s ease;
-          transition: box-shadow 0.2s ease, border 0.2s ease;
-          transition: box-shadow 0.2s ease, border 0.2s ease, -webkit-box-shadow 0.2s ease; } }
-    .switcher__slider:hover:after {
-      -webkit-box-shadow: 0 2px 5px 0 rgba(50, 50, 50, 0.25);
-              box-shadow: 0 2px 5px 0 rgba(50, 50, 50, 0.25); }
-    .switcher__slider:active:after {
-      border: 2px solid #68b738;
-      -webkit-box-shadow: 0 3px 5px 0 rgba(50, 50, 50, 0.35);
-              box-shadow: 0 3px 5px 0 rgba(50, 50, 50, 0.35); }
-    .switcher__slider:before {
-      pointer-events: none; }
-      @media (min-width: 321px) {
-        .switcher__slider:before {
-          content: '';
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          -webkit-transform: translate(-50%, -50%);
-                  transform: translate(-50%, -50%);
-          border-radius: 50%;
-          background-color: #68b738;
-          width: 8px;
-          height: 8px;
-          z-index: 1; } }
-  .switcher__text {
-    border-bottom: 1px dotted rgba(0, 0, 0, 0.23);
-    -webkit-transition: border 0.2s ease;
-    transition: border 0.2s ease; }
-    .switcher__text:hover {
-      border-bottom: 1px solid rgba(0, 0, 0, 0.4); }
-    .switcher__text:active {
-      border-bottom: 1px solid transparent; }
 
 .footer__block {
   display: -webkit-box;
