--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
+
 @import "site/variables";
 @import "site/body";
 @import "site/content";
@@ -5,6 +6,10 @@
 @import "site/part";
 @import "site/breakpoint";
 @import "site/_types";
+
+@import "site/header";
+@import "site/logo";
+@import "site/nav";
 
 @import "site/top-nav";
 @import "site/main-sect";
@@ -16,12 +21,9 @@
 
 @import "site/btn";
 @import "site/social";
-@import "site/extended";
-@import "site/switcher";
 
 
 
 @import "site/footer";
 
 // @import "site/nav-icons";
-
