--- a/css/main.css
+++ b/css/main.css
@@ -80,13 +80,13 @@ a {
   max-width: 1440px;
   margin: 0 auto; }
   .content__warp {
-    padding: 0 20px; }
+    padding: 10px 20px 0  20px; }
     @media (min-width: 321px) {
       .content__warp {
-        padding: 0 30px; } }
+        padding: 20px 30px 0  30px; } }
     @media (min-width: 1440px) {
       .content__warp {
-        padding: 0 110px; } }
+        padding: 55px 110px 0 110px; } }
 
 .port {
   display: block;
@@ -175,12 +175,15 @@ h1 {
           -ms-flex-pack: justify;
               justify-content: space-between; } }
 
+.header__logo {
+  width: 100%; }
+
 .logo {
+  border: 1px solid red;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center; }
@@ -194,7 +197,7 @@ h1 {
     top: 50%;
     -webkit-transform: translateY(-50%);
             transform: translateY(-50%);
-    left: 25px; }
+    left: 0; }
     @media (min-width: 321px) {
       .logo__mobile {
         display: none; } }
