--- a/sass/site/content.scss
+++ b/sass/site/content.scss
@@ -2,12 +2,12 @@
   max-width: $content-width;
   margin: 0 auto;
   &__warp {
-    padding: 0 20px;
+    padding: 10px 20px 0  20px;
     @media (min-width: $mobile) {
-      padding: 0 30px;
+      padding: 20px 30px 0  30px;
     }
     @media (min-width: $desktop) {
-      padding: 0 110px;
+      padding: 55px 110px 0 110px;
     }
   }
 }
