--- a/sass/site/logo.scss
+++ b/sass/site/logo.scss
@@ -1,7 +1,8 @@
 .logo {
+  border: 1px solid red;
   position: relative;
   display: flex;
-  width: 100%;
+  //width: 100%;
   justify-content: center;
   @media (min-width: $tablet) {
     justify-content: normal;
@@ -10,7 +11,7 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    left: 25px;
+    left: 0;
     @media (min-width: $mobile) {
       display: none;
     }
