--- a/css/main.css
+++ b/css/main.css
@@ -78,17 +78,23 @@ a {
     .breakpoint {
       background-color: aqua; } }
 
+h1 {
+  font: normal 36px/36px "Oswald", sans-serif; }
+  @media (min-width: 321px) {
+    h1 {
+      font: normal 60px/60px "Oswald", sans-serif; } }
+
 .h2, h2 {
-  font: normal 36px/60px "Oswald", sans-serif; }
+  font: normal 36px/36px "Oswald", sans-serif; }
   @media (min-width: 321px) {
     .h2, h2 {
-      font: normal 60px/90px "Oswald", sans-serif; } }
+      font: normal 60px/60px "Oswald", sans-serif; } }
 
 .h3, h3 {
-  font: normal 24px/36px "Oswald", sans-serif; }
+  font: normal 24px/1 "Oswald", sans-serif; }
   @media (min-width: 321px) {
     .h3, h3 {
-      font: normal 36px/54px "Oswald", sans-serif; } }
+      font: normal 36px/1 "Oswald", sans-serif; } }
 
 .h4, h4 {
   font: 500 20px/30px "Oswald", sans-serif; }
@@ -99,10 +105,10 @@ a {
     .h4, h4 {
       font: normal 20px/30px "Oswald", sans-serif; } }
 
-.h5, .nav__item, .top-nav__item, .main-sect__button, .btn, h5 {
-  font: normal 14px/26px "Oswald", sans-serif; }
+.h5, .nav__item, .top-nav__item, .btn, h5 {
+  font: normal 14px/21px "Oswald", sans-serif; }
   @media (min-width: 321px) {
-    .h5, .nav__item, .top-nav__item, .main-sect__button, .btn, h5 {
+    .h5, .nav__item, .top-nav__item, .btn, h5 {
       font: normal 20px/30px "Oswald", sans-serif; } }
 
 .header__warp {
@@ -253,34 +259,53 @@ a {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
-          flex-direction: column; }
+          flex-direction: column;
+  position: relative; }
 
 .main-sect__label {
-  display: none; }
+  /*    display: none;
+        @media (min-width: $mobile) {
+          display: block;
+        }*/
+  text-align: center;
+  color: #ffffff;
+  background: url("/img/index-background-mobile.png") no-repeat;
+  margin: 0 -20px;
+  padding: 30px;
+  height: 310px; }
   @media (min-width: 321px) {
     .main-sect__label {
-      display: block; } }
+      background: none;
+      color: #000000;
+      text-align: start;
+      height: auto;
+      padding-bottom: 40px; } }
 
-.main-sect__title--ident {
-  padding-bottom: 30px; }
+.main-sect__title--indent {
+  padding-bottom: 20px; }
+  @media (min-width: 321px) {
+    .main-sect__title--indent {
+      padding-bottom: 40px; } }
 
 .main-sect__description {
   text-transform: uppercase; }
-  .main-sect__description--ident {
+  .main-sect__description--indent {
     padding-bottom: 45px; }
+    @media (min-width: 321px) {
+      .main-sect__description--indent {
+        padding-bottom: 0; } }
     @media (min-width: 1440px) {
-      .main-sect__description--ident {
+      .main-sect__description--indent {
         padding-bottom: 50px; } }
 
-@media (min-width: 321px) {
-  .main-sect__picture--mobile {
-    display: none; } }
-
-.main-sect__picture--mobile--ident {
-  margin-top: 150px; }
+.main-sect__picture--mobile {
+  margin: -145px auto 10px auto; }
+  @media (min-width: 321px) {
+    .main-sect__picture--mobile {
+      display: none; } }
 
 .main-sect__picture--tablet {
-  margin-top: -70px;
+  margin: -75px 0 0 -75px;
   display: none; }
   @media (min-width: 321px) {
     .main-sect__picture--tablet {
@@ -288,25 +313,29 @@ a {
       -webkit-box-ordinal-group: 2;
           -ms-flex-order: 1;
               order: 1; } }
+  @media (min-width: 1440px) {
+    .main-sect__picture--tablet {
+      display: none; } }
+
+.main-sect__picture--desktop {
+  display: none; }
+  @media (min-width: 1440px) {
+    .main-sect__picture--desktop {
+      display: block; } }
 
 .main-sect__button {
-  background-color: #68b738;
-  color: #ffffff;
-  text-align: center;
-  padding: 10px 0; }
-  @media (min-width: 321px) {
-    .main-sect__button {
-      padding: 10px 30px;
-      z-index: 1; } }
+  text-transform: uppercase;
+  white-space: nowrap;
+  position: relative;
+  z-index: 1; }
 
-.main-sect--ident {
+.main-sect--indent {
   padding-bottom: 20px; }
   @media (min-width: 321px) {
-    .main-sect--ident {
-      padding-bottom: 50px;
-      padding-left: 90px; } }
+    .main-sect--indent {
+      padding: 30px 0 0 80px; } }
   @media (min-width: 1440px) {
-    .main-sect--ident {
+    .main-sect--indent {
       padding-bottom: 30px; } }
 
 @media (min-width: 1440px) {
