--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@
 @import "site/body";
 @import "site/content";
 @import "site/mixins";
-@import "site/part";
+@import "site/maket";
 @import "site/breakpoint";
 @import "site/_types";
 
