--- a/sass/site/nav.scss
+++ b/sass/site/nav.scss
@@ -31,8 +31,14 @@
     }
     @media (min-width: $desktop) {
       color: $white;
+      &:hover {
+        color: rgba($white,.6)
+      }
       &:focus {
         border-bottom: 2px solid $white;
+      }
+      &:active {
+        color: rgba($white,.3);
       }
     }
     &:first-child {
