--- a/sass/site/main-sect.scss
+++ b/sass/site/main-sect.scss
@@ -5,21 +5,16 @@
     flex-direction: column;
     position: relative;
     @media (min-width: $mobile) {
-      //align-items: center;
     }
     @media (min-width: $desktop) {
     }
   }
   &__label {
-    /*    display: none;
-        @media (min-width: $mobile) {
-          display: block;
-        }*/
     text-align: center;
     color: $white;
     background: url('/img/index-background-mobile.png') no-repeat;
     margin: 0 -20px;
-    padding: 30px;
+    padding: 20px;
     height: 310px;
     @media (min-width: $mobile) {
       background: none;
@@ -49,7 +44,7 @@
         padding-bottom: 0;
       }
       @media (min-width: $desktop) {
-        padding-bottom: 50px;
+        padding-bottom: 0;
       }
     }
   }
@@ -74,7 +69,7 @@
     &--desktop {
       display: none;
       @media (min-width: $desktop) {
-        display: block;
+        //display: block;          ///////////////////////////////////////////////////////////////////////////
       }
     }
   }
@@ -83,16 +78,5 @@
     white-space: nowrap;
     position: relative;
     z-index: 1;
-  }
-  &--indent {
-    padding-bottom: 20px;
-    @media (min-width: $mobile) {
-      padding: 30px 0 0 80px;
-      //padding-bottom: 50px;
-      //padding-left: 90px;
-    }
-    @media (min-width: $desktop) {
-      padding-bottom: 30px;
-    }
   }
 }
